#143 [root] Update readme preview